--- a/index.html
+++ b/index.html
@@ -469,19 +469,19 @@
 							<nav class="navbar">
 								<div class="container">
 									<a class="navbar-brand" href="#">
-										<i class="fa fa-behance" width="35" height="29"></i>
+										<i class="fa fa-behance"></i>
 									</a>
 									<a class="navbar-brand" href="#">
-										<i class="fa fa-dribbble" width="35" height="29"></i>
+										<i class="fa fa-dribbble"></i>
 									</a>
 									<a class="navbar-brand" href="#">
-										<i class="fa fa-twitter" width="35" height="29"></i>
+										<i class="fa fa-twitter"></i>
 									</a>
 									<a class="navbar-brand" href="#">
-										<i class="fa fa-facebook" width="35" height="29"></i>
+										<i class="fa fa-facebook"></i>
 									</a>
 									<a class="navbar-brand" href="#">
-										<i class="fa fa-linkedin" width="35" height="29"></i>
+										<i class="fa fa-linkedin"></i>
 									</a>
 								</div>
 							</nav>
